--- a/Css/_base.css
+++ b/Css/_base.css
@@ -1,14 +1,15 @@
+body {
+  overflow-y: scroll;
+}
 .container {
   margin-left: auto;
   margin-right: auto;
   max-width: 1040px;
-  overflow-x: hidden;
 }
 .header-container {
   -webkit-backface-visibility: hidden;
   position: fixed;
   width: 100%;
-  background-color: #fff;
   z-index: 1010;
   top: 0;
   left: 0;
@@ -24,6 +25,15 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#00000020";
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#00000020');
   padding: 20px 0;
+}
+.dashboard .header {
+  background-color: #3b3b3b;
+  padding: 2px 0;
+	-o-box-shadow: none;
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+  border-bottom: none;
 }
 .header-left {
   float: left;
@@ -64,6 +74,10 @@
 }
 .body-content {
   padding-top: 84px;
+  padding-bottom: 84px;
+}
+.dashboard .body-content {
+  padding-top: 47px;
 }
 @media (max-width: 768px) {
   .header {
