--- a/Views/home.html
+++ b/Views/home.html
@@ -1,3 +1,5 @@
+<home-header></home-header>
+
 <div class="body-content">
   <section class="hero-container bg-color_green_light">
     <div class="hero container">
@@ -22,7 +24,7 @@
         <span>ارائه خدمات</span>
         <span> در دنیای هوشمند</span>
       </div>
-      <div class="hero-register-button" ui-sref="login">
+      <div class="hero-register-button" ui-sref="account">
         <span>ثبت نام در سامانه</span>
       </div>
       <div class="hero-bg">
@@ -235,3 +237,6 @@
     </div>
   </section>
 </div>
+
+
+<home-footer></home-footer>
