--- a/Css/_dashboard.css
+++ b/Css/_dashboard.css
@@ -49,15 +49,12 @@ ul.services-category-list .category-title {
   padding-bottom: 15px;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 10px;
+  color: #333;
 }
 .services-category-title img {
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  background-color: #f3f3f3;
-  padding-bottom: 5px;
   display: inline-block;
-  margin-bottom: 10px;
+  opacity: .8;
 }
 .service-item {
   padding: 20px 10px;
