--- a/Css/_homepage.css
+++ b/Css/_homepage.css
@@ -90,7 +90,9 @@
   }
 }
 .hero-register-form input[type='text'],
-.hero-register-form input[type='number'] {
+.hero-register-form input[type='number'],
+.hero-register-form input[type='password']
+ {
   width: 100%;
   border: 1px solid #a8a8a8;
   border-radius: 3px;
@@ -99,7 +101,8 @@
   z-index: 0;
   background-color: #fff;
 }
-.hero-register-form input[type='button'] {
+.hero-register-form input[type='button'],
+.hero-register-form input[type='submit'] {
   background-color: #00bf9a;
   width: 100%;
   display: inline-block;
@@ -384,4 +387,16 @@ ul.guidance .step-description {
 }
 .download-links-wrapper {
   margin-top: 20px;
+}
+
+
+/* Form Validation ************************************************************/
+.hero-register-form .ng-dirty.ng-valid {
+  border-color: #148b0a;
+  outline-color: #148b0a;
+}
+
+.hero-register-form .ng-dirty.ng-invalid {
+  border-color: #b4180e;
+  outline-color: #b4180e;
 }
