--- a/Views/login.html
+++ b/Views/login.html
@@ -2,85 +2,23 @@
   <section class="hero-container bg-color_green_light">
     <div class="hero container">
       <div class="hero-register-form" style="display: block; left: 50%; transform: translateX(-50%);">
-        <form>
+        <form name="loginForm" ng-submit="loginForm.$valid && vm.login()" novalidate>
           <div class="text-input input_phone">
-            <input type="text" name="phone" placeholder="شماره تلفن همراه" ng-model="vm.userData.username"/>
+            <span ng-show="loginForm.phone.$dirty && loginForm.phone.$invalid">مثال: 09xxxxxxxxx یا 9xxxxxxxxx</span><br />
+            <input type="number" name="phone" placeholder="شماره تلفن همراه" ng-model="vm.userData.username" ng-pattern="/^0?9[0-9]{9}$/" required/>
             <!--<label for="">شماره تلفن همراه</label>-->
           </div>
           <div class="text-input input_password">
-            <input type="text" name="password" placeholder="رمز عبور" ng-model="vm.userData.password"/>
+            <input type="password" name="password" placeholder="رمز عبور" ng-model="vm.userData.password" ng-pattern="/^.{6,}$/" required/>
+            <span ng-show="loginForm.password.$dirty && loginForm.password.$invalid">حداقل 6 کاراکتر</span>
           </div>
-          <input type="button" name="login" value="ورود به سامانه" style="margin-top:36px;" ng-click="vm.login()">
-          <div class="agree-terms">
-            <input type="checkbox" name="agree-terms" value="checked"/>
-            <span>تمامی قوانین و مقررات را تأیید میکنم.</span>
-          </div>
-          <input type="button" name="register" value="ثبت نام در سامانه" ng-click="vm.registerMobileNumber()">
+          <input type="submit" name="login" value="ورود به سامانه" style="margin-top:36px;">
         </form>
+        <div>
+          <p>عضو نیستید؟</p>
+          <a ui-sref="register">عضو شوید!</a>
+        </div>
       </div>
     </div>
   </section>
-</div>
-<div class="footer-container">
-  <div class="footer container">
-    <div class="footer-columns clearfix">
-      <div class="footer-col footer-right-col footer-brand-description">
-      </div>
-      <div class="footer-col">
-        <ul>
-          <li class="text_h2 color_primary_lighter">لینک ها</li>
-          <li>
-            <span>حریم شخصی</span>
-          </li>
-          <li>
-            <span>قوانین و مقررات</span>
-          </li>
-          <li>
-            <span>درباره ی متخصصین</span>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <ul>
-          <li class="text_h2 color_primary_lighter">درباره ی ما</li>
-          <li>
-            <span>ثبت نام متخصصین</span>
-          </li>
-          <li>
-            <span>بلاگ</span>
-          </li>
-          <li>
-            <span>ارتباط با ما</span>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-col footer-left-col">
-        <ul>
-          <li class="text_h2 color_primary_lighter">ارتباط با ما</li>
-          <li>
-            <span>منتظر نظرات شما در باره آی هندی هستیم</span>
-          </li>
-          <li>
-            <table>
-              <tbody>
-                <tr>
-                  <td>تلفن پشتیبانی</td>
-                  <td>021-12345678</td>
-                </tr>
-                <tr>
-                  <td>ایمیل</td>
-                  <td>
-                    <a class="footer__email" href="mailto:hi@ihandy.ir">hi[at]ihandy.ir</a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </li>
-          <li>
-            <span></span>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
 </div>
