--- a/Views/Dashboard/select_service.html
+++ b/Views/Dashboard/select_service.html
@@ -116,8 +116,8 @@
         <div id="main_column2" class="layout_content services">
           <div class="services-category">
             <div class="services-category-title">
-              <img src="" alt="">
-              <div>تعویض روغن ماشین</div>
+              <img src="Images/icn/service/ic_oil_buttle.png" alt="">
+              <div>تعویض روغن</div>
             </div>
             <div class="services-category-wrapper">
               <div class="service-item edit-mode">
@@ -168,126 +168,138 @@
                 </div>
               </div>
               <div class="service-item">
-                  <div class="service-header">
-                    <div class="actions">
-                      <a href="#" class="add-link">
-                        <i class="fa fa-plus"></i>
-                        <span>افزودن</span>
-                      </a>
-                        <a href="#" class="remove-link">
-                          <i class="fa fa-close"></i>
-                          <span>حذف</span>
-                        </a>
-                    </div>
-                    <div class="service-title">تعویض لاستیک جلو</div>
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
                   </div>
-                  <div class="service-edit" style="display: none"></div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
                 </div>
+                <div class="service-edit" style="display: none"></div>
+              </div>
               <div class="service-item">
-                    <div class="service-header">
-                      <div class="actions">
-                        <a href="#" class="add-link">
-                          <i class="fa fa-plus"></i>
-                          <span>افزودن</span>
-                        </a>
-                          <a href="#" class="remove-link">
-                            <i class="fa fa-close"></i>
-                            <span>حذف</span>
-                          </a>
-                      </div>
-                      <div class="service-title">تعویض لاستیک جلو</div>
-                    </div>
-                    <div class="service-edit" style="display: none"></div>
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
                   </div>
-                  <div class="service-item">
-                      <div class="service-header">
-                        <div class="actions">
-                          <a href="#" class="add-link">
-                            <i class="fa fa-plus"></i>
-                            <span>افزودن</span>
-                          </a>
-                            <a href="#" class="remove-link">
-                              <i class="fa fa-close"></i>
-                              <span>حذف</span>
-                            </a>
-                        </div>
-                        <div class="service-title">تعویض لاستیک جلو</div>
-                      </div>
-                      <div class="service-edit" style="display: none"></div>
-                    </div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
+                </div>
+                <div class="service-edit" style="display: none"></div>
+              </div>
+              <div class="service-item">
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
+                  </div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
+                </div>
+                <div class="service-edit" style="display: none"></div>
+              </div>
             </div>
           </div>
           <div class="services-category">
-              <div class="services-category-title">
-                <img src="" alt="">
-                <div>تعویض روغن ماشین</div>
+            <div class="services-category-title">
+              <img src="Images/icn/service/ic_disk.png" alt="">
+              <div>بازدید چهار چرخ</div>
+            </div>
+            <div class="services-category-wrapper">
+              <div class="service-item">
+                <div class="service-header">
+                  <div class="actions">
+                    <a class="add-link" href="#">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a class="remove-link" href="#">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
+                  </div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
+                </div>
               </div>
-              <div class="services-category-wrapper">
-                <div class="service-item">
-                  <div class="service-header">
-                    <div class="actions">
-                      <a class="add-link" href="#">
-                        <i class="fa fa-plus"></i>
-                        <span>افزودن</span>
-                      </a>
-                      <a class="remove-link" href="#">
-                        <i class="fa fa-close"></i>
-                        <span>حذف</span>
-                      </a>
-                    </div>
-                    <div class="service-title">تعویض لاستیک جلو</div>
+              <div class="service-item">
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
                   </div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
                 </div>
-                <div class="service-item">
-                  <div class="service-header">
-                    <div class="actions">
-                      <a href="#" class="add-link">
-                        <i class="fa fa-plus"></i>
-                        <span>افزودن</span>
-                      </a>
-                        <a href="#" class="remove-link">
-                          <i class="fa fa-close"></i>
-                          <span>حذف</span>
-                        </a>
-                    </div>
-                    <div class="service-title">تعویض لاستیک جلو</div>
+                <div class="service-edit" style="display: none"></div>
+              </div>
+              <div class="service-item">
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
                   </div>
-                  <div class="service-edit" style="display: none"></div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
                 </div>
-                <div class="service-item">
-                  <div class="service-header">
-                    <div class="actions">
-                      <a href="#" class="add-link">
-                        <i class="fa fa-plus"></i>
-                        <span>افزودن</span>
-                      </a>
-                        <a href="#" class="remove-link">
-                          <i class="fa fa-close"></i>
-                          <span>حذف</span>
-                        </a>
-                    </div>
-                    <div class="service-title">تعویض لاستیک جلو</div>
+                <div class="service-edit" style="display: none"></div>
+              </div>
+              <div class="service-item">
+                <div class="service-header">
+                  <div class="actions">
+                    <a href="#" class="add-link">
+                      <i class="fa fa-plus"></i>
+                      <span>افزودن</span>
+                    </a>
+                    <a href="#" class="remove-link">
+                      <i class="fa fa-close"></i>
+                      <span>حذف</span>
+                    </a>
                   </div>
-                  <div class="service-edit" style="display: none"></div>
+                  <div class="service-title">تعویض لاستیک جلو</div>
                 </div>
-                <div class="service-item">
-                      <div class="service-header">
-                        <div class="actions">
-                          <a href="#" class="add-link">
-                            <i class="fa fa-plus"></i>
-                            <span>افزودن</span>
-                          </a>
-                            <a href="#" class="remove-link">
-                              <i class="fa fa-close"></i>
-                              <span>حذف</span>
-                            </a>
-                        </div>
-                        <div class="service-title">تعویض لاستیک جلو</div>
-                      </div>
-                      <div class="service-edit" style="display: none"></div>
-                    </div>
+                <div class="service-edit" style="display: none"></div>
               </div>
             </div>
+          </div>
+          <div class="services-category">
+            <div class="services-category-title">
+              <img src="Images/icn/service/ic_tire.png" alt="">
+              <div>تعویض لاستیک</div>
+            </div>
+          </div>
+          <div class="services-category">
+            <div class="services-category-title">
+              <img src="Images/icn/service/ic_battery.png" alt="">
+              <div>تعویض باتری</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
